[tool.poetry]
name = "crypto-wallet"
version = "0.1.0"
description = ""
authors = ["Kuj1 <the.same.dentist@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_wallet"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
bs4 = "^0.0.1"
aiohttp = "^3.8.3"
fake-useragent = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
